--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Dooz Game</title>
     <!-- css -->
     <link rel="stylesheet" href="./css/main.css">
+    <!-- font -->
+    <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -21,6 +23,12 @@
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
+    </div>
+
+    <!-- winning message -->
+    <div class="winning-wrapper">
+        <h1 class="winning-text">winning text</h1>
+        <button class="restart-btn">Restart Game</button>
     </div>
     <!-- script -->
     <script src="./js/main.js"></script>
